--- a/image_compression_with_svd.ipynb
+++ b/image_compression_with_svd.ipynb
@@ -112,7 +112,7 @@
     "u2, s2, vh2 = np.linalg.svd(image_g, full_matrices=True)\n",
     "u3, s3, vh3 = np.linalg.svd(image_b, full_matrices=True)\n",
     "\n",
-    "print(\"u1.shape:\", u1.shape)\n",
+    "print(\"ciao ciao:\", u1.shape)\n",
     "print(\"s1.shape:\", s1.shape)\n",
     "print(\"vh1.shape:\", vh1.shape)"
    ]
